fix bug covering menu.

--- a/Project/P_Code/GJS/GJS/W_GJS/Content/nh/css/style218.css
+++ b/Project/P_Code/GJS/GJS/W_GJS/Content/nh/css/style218.css
@@ -578,7 +578,6 @@ img { border: none;}
 	left: 0;
 	width: 50%;
 	height: 250px;
-	z-index: 20;
 	background: #444;
     color: #fff;
 	box-shadow: inset 0 -2px #FFBE14;
